@@ -7704,6 +7704,9 @@ In addition, while on, the \fBposix\fR option
 disables exporting variable type attributes to the environment for other ksh
 processes to import;
 .IP \[bu]
+if the \fB\-B\fR/\fBbraceexpand\fR option is turned back on,
+disallows brace expansion on the results of unquoted expansions;
+.IP \[bu]
 disables the special handling of repeated
 .I isspace
 class characters in the
